# multiagent_dsatutor

./: README.md
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: checker_agent.py  examiner_agent.py  quiz_agent.py  teacher_agent.py  testing_agent.py
backend/controllers/: auth.py  code_quest.py  concept_mastery.py  groq_setup.py  profile_details.py  quiz_challenge.py
backend/schema/: schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: Login.jsx  Signup.jsx
frontend/src/components/: AIMentor.jsx  CodingPracticePage.jsx  DashBoard.jsx  FeaturesSection.jsx  HeroSection.jsx  Home.jsx  Profile.jsx  QuizPage.jsx  TopicUnderstanding.jsx  theme.js
frontend/src/contexts/: UserContext.jsx
frontend/src/services/: quizService.js
frontend/src/shared/: Footer.jsx  Navbar.jsx
