[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "bcrypt==4.0.1",
    "bs4>=0.0.2",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-groq>=0.3.8",
    "langgraph>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
